--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
             <hr>
             <div class="end-footer">
                 <span>&copy; all right reserved</span>
-                <span><a href="http://github.com/solomon-spec">follow me of github</a></span>
+                <span><a href="http://github.com/solomon-spec">follow me on github</a></span>
             </div>
         </footer>
     </div>
